samples/_failures_safe/1761351678_1b369f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_808842eb.c: In function ‘main’:
./samples/SAFE/__tmp_808842eb.c:156:13: error: expected ‘;’ at end of input
  156 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_808842eb.c:156:5: error: expected declaration or statement at end of input
  156 |     return 0
      |     ^~~~~~
